--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,75 @@
     "_480p",
     "_576p",
     "_720p"
-  ]
+  ],
+  "files.associations": {
+    "*.ic": "javascript",
+    "*.ids": "javascript",
+    "*.idsq": "javascript",
+    "*.idsv": "javascript",
+    "*.if": "javascript",
+    "*.ijs": "javascript",
+    "*.il": "javascript",
+    "*.ip": "javascript",
+    "*.is": "javascript",
+    "*.it": "javascript",
+    "[0-9]*.config": "javascript",
+    "[0-9]*.model": "javascript",
+    "[0-9]*.view": "javascript",
+    "*.bms": "quickbms",
+    "deh_main.h": "c",
+    "string_view": "c",
+    "kernel.h": "c",
+    "string.h": "c",
+    "*.C": "cpp",
+    "*.c": "c",
+    "array": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "*.tcc": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "exception": "cpp",
+    "algorithm": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp",
+    "optional": "cpp",
+    "random": "cpp",
+    "system_error": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "fstream": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "new": "cpp",
+    "numbers": "cpp",
+    "ostream": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "cinttypes": "cpp",
+    "typeinfo": "cpp",
+    "stdbool.h": "c",
+    "sound.h": "c"
+  }
 }
